content/terraform-plugin-framework/v1.7.x/docs/plugin/framework/functions/parameters/index.mdx
---
page_title: 'Plugin Development - Framework: Function Parameters'
description: >-
  Learn the function parameter types in the provider development framework.
  Parameters are positional data arguments in a function definition.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-03-06T10:49:53-05:00
last_modified: 2025-03-06T10:49:53-05:00
# END AUTO GENERATED METADATA
---

# Parameters

Parameters in [function definitions](/terraform/plugin/framework/functions/implementation#definition-method) describes how data values are passed to the function logic. Every parameter type has an associated [value type](/terraform/plugin/framework/handling-data/types), although this data handling is simplified for function implementations over other provider concepts, such as resource implementations.

## Available Parameter Types

Function definitions support the following parameter types:

- [Primitive](#primitive-parameter-types): Parameter that accepts a single value, such as a boolean, number, or string.
- [Collection](#collection-parameter-types): Parameter that accepts multiple values of a single element type, such as a list, map, or set.
- [Object](#object-parameter-type): Parameter that accepts a structure of explicit attribute names.
- [Dynamic](#dynamic-parameter-type): Parameter that accepts any value type.

### Primitive Parameter Types

Parameter types that accepts a single data value, such as a boolean, number, or string.

| Parameter Type | Use Case |
|----------------|----------|
| [Bool](/terraform/plugin/framework/functions/parameters/bool) | Boolean true or false |
| [Float64](/terraform/plugin/framework/functions/parameters/float64) | 64-bit floating point number |
| [Int64](/terraform/plugin/framework/functions/parameters/int64) | 64-bit integer number |
| [Number](/terraform/plugin/framework/functions/parameters/number) | Arbitrary precision (generally over 64-bit, up to 512-bit) number |
| [String](/terraform/plugin/framework/functions/parameters/string) | Collection of UTF-8 encoded characters |

### Collection Parameter Types

Parameter types that accepts multiple values of a single element type, such as a list, map, or set.

| Parameter Type | Use Case |
|----------------|----------|
| [List](/terraform/plugin/framework/functions/parameters/list) | Ordered collection of single element type |
| [Map](/terraform/plugin/framework/functions/parameters/map) | Mapping of arbitrary string keys to values of single element type |
| [Set](/terraform/plugin/framework/functions/parameters/set) | Unordered, unique collection of single element type |

### Object Parameter Type

Parameter type that accepts a structure of explicit attribute names.

| Parameter Type | Use Case |
|----------------|----------|
| [Object](/terraform/plugin/framework/functions/parameters/object) | Single structure mapping explicit attribute names |

### Dynamic Parameter Type

<Note>

Dynamic value handling is an advanced use case. Prefer static parameter types when possible unless absolutely necessary for your use case.

</Note>

Parameter that accepts any value type, determined by Terraform at runtime.

| Parameter Type | Use Case |
|----------------|----------|
| [Dynamic](/terraform/plugin/framework/functions/parameters/dynamic) | Accept any value type of data, determined at runtime. |

## Parameter Naming

All parameter types have a `Name` field that is **required**.

### Missing Parameter Names

Attempting to use unnamed parameters will generate runtime errors of the following form:

```text
│ Error: Failed to load plugin schemas
│
│ Error while loading schemas for plugin components: Failed to obtain provider schema: Could not load the schema for provider registry.terraform.io/cloud_provider/cloud_resource: failed to
│ retrieve schema from provider "registry.terraform.io/cloud_provider/cloud_resource": Invalid Function Definition: When validating the function definition, an implementation issue was
│ found. This is always an issue with the provider and should be reported to the provider developers.
│
│ Function "example_function" - Parameter at position 0 does not have a name.
```

### Parameter Errors

Parameter names are used in runtime errors to highlight which parameter is causing the issue. For example, using a value that is incompatible with the parameter type will generate an error message such as the following:

```text
│ Error: Invalid function argument
│
│   on resource.tf line 10, in resource "example_resource" "example":
│   10:   configurable_attribute = provider::example::example_function("string")
│     ├────────────────
│     │ while calling provider::example::example_function(bool_param)
│
│ Invalid value for "bool_param" parameter: a bool is required.
```
